--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,11 +21,16 @@ spring:
     baseline-on-migrate: true
 
 jwt:
-      secret: ${JWT_SECRET}
-      expiration: 86400000
+  secret: ${JWT_SECRET}
+  expiration: 86400000
 
 
 app:
   admin:
     email: ${ADMIN_EMAIL}
     password: ${ADMIN_PASSWORD}
+
+logging:
+  level:
+    org.springframework.security: DEBUG
+    org.springframework.security.web: DEBUG
